# tree-sitter-erlang

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  index.html  package-lock.json  package.json  playground.js  pyproject.toml  setup.py  tree-sitter-erlang.wasm  tree-sitter.json
.github/workflows/: ci.yml  generate-parser.yml
bindings/c/: tree-sitter-erlang.h  tree-sitter-erlang.pc.in
bindings/go/: binding.go  binding_test.go
bindings/python/tree_sitter_erlang/: __init__.py
docs/: README.md
queries/: LICENSE  highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  files.txt  sigils.txt  statements.txt  terms.txt
test/highlight/: attributes.erl  compile.erl  expressions.erl
